misc front implements

--- a/herams/styles/entrypg/menu.less
+++ b/herams/styles/entrypg/menu.less
@@ -11,13 +11,13 @@
 
   .Logo {
     border-bottom: 1px solid @sep-color;
-    padding: 10px 0;
+    padding: 45px 0 43px 0;
     margin-bottom: 35px;
     text-align:center;
 
     img {
-      width: 260px;
-      height: 220px;
+      width: 250px;
+      //height: 220px;
       margin: auto;
     }
   }
