--- a/herams/views/home.html
+++ b/herams/views/home.html
@@ -2,7 +2,7 @@
 
     <div class="menu-entry">
         <div class="Logo">
-            <img src="img/logotmp3.jpg"/>
+            <img src="img/HeRAMS.png"/>
         </div>
         <div class="menu-items">
             <ul>
@@ -14,7 +14,7 @@
     </div>
 
     <div class="map-entry">
-            <homemap mapdata="homedata" ng-cloak></homemap>
+       <homemap mapdata="homedata" ng-cloak></homemap>
     </div>
 
 </div>
