Overview first built + misc improvements

--- a/herams/styles/variables.less
+++ b/herams/styles/variables.less
@@ -1,14 +1,18 @@
 /* -- BRANDING -- */
 @brand-blue: #5791e1;
+@dark-grey: #42424b;
+@intermediate-grey: #878787;
+@light-grey: #e0e0e0;
 
 /* -- LAYOUT -- */
 
 /* - sizes - */
 @home-sidebar-width: 350px;
+@overview-sidebar-width: 285px;
 
 /* - colors - */
 @home-sidebar-bgcolor: white;
-@home-popups-bgcolor: #42424b;
+@home-popups-bgcolor: @dark-grey;
 
 @txt-dark-bg : white;
 
