--- a/herams/styles/overview/overview.less
+++ b/herams/styles/overview/overview.less
@@ -25,6 +25,8 @@
       margin-bottom: 35px;
       text-align:center;
 
+      cursor: pointer;
+
       img {
         width: 220px;
         margin: auto;
