Overall build progress + no more ui-router

--- a/herams/styles/main.less
+++ b/herams/styles/main.less
@@ -29,6 +29,9 @@ html, body {
 html, body, body > div, body > div > div {
   height: 100%;
 }
+body {
+  background-color: @light-grey;
+}
 a, a:hover, a:focus {
   cursor: pointer;
 }
