header changes to app (user infos display)

--- a/herams/styles/main.less
+++ b/herams/styles/main.less
@@ -5,6 +5,8 @@
 @import "variables.less";
 @import "textstyles.less";
 
+@import "base.less";
+
 @import "home/home.less";
 
 @import "home/menu.less";
