--- a/herams/styles/main.less
+++ b/herams/styles/main.less
@@ -6,14 +6,15 @@
 @import "textstyles.less";
 
 @import "base.less";
+@import "depoverrides.less";
 
 @import "home/home.less";
 
 @import "home/menu.less";
 @import "home/map.less";
 
-@import "overview/overview-new.less";
-@import "overview/layout1.less";
+@import "overview/overview.less";
+@import "overview/layout-map-split-4.less";
 
 
 .browsehappy {
@@ -46,3 +47,4 @@ a, a:hover, a:focus {
   font-size: @font-size-base;
   font-weight: @regular;
 }
+
