--- a/herams/styles/overview/overview.less
+++ b/herams/styles/overview/overview.less
@@ -118,50 +118,8 @@
         }
       }
 
-      .datagrid {
-
-        .row {
-          * {
-            padding-right: 0;
-            padding-left: 0;
-            margin:0;
-          }
-
-
-          &.spacer {
-            height: 18px;
-          }
-
-          .one, .two, .three, .four, .five {
-            height: 0;
-            padding-bottom: 100%;
-
-            .chart-container {
-              background-color: white;
-              -webkit-border-radius: 5px;
-              -moz-border-radius: 5px;
-              border-radius: 5px;
-              height: 0;
-              padding-bottom: 100%;
-              overflow: hidden;
-            }
-          }
-
-          .one {
-            border: solid 2px white;
-            border-radius: 5px;
-          }
-
-        }
-
-        &.layout1 {
-          .col-3 {
-            padding-left: 20px;
-            .row:first-child {
-              padding-bottom: 20px;
-            }
-          }
-        }
+      .main-content {
+        margin-top: 20px;
       }
 
     }
@@ -170,62 +128,21 @@
 
 }
 
-
-#mapid {
-  height: 500px;
+.map-container {
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  border: 3px solid white;
 }
 
-
-#chart1,
-#chart2,
-#chart3,
-#chart4 {
-  margin:15px;
+.chart-container {
+  background-color: white;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  height: 100%;
+  padding:15px;
 }
-
-.highcharts-title {
-  font-family: @font-family-sans-serif;
-}
-.highcharts-grid-line {
-    stroke-width: 0;
-}
-.highcharts-axis-line {
-    stroke-width: 0;
-}
-.highcharts-tick {
-    stroke-width: 0;
-}
-.highcharts-minor-grid-line {
-    stroke-width: 0;
-}
-.highcharts-credits {
-  display: none;
-}
-
-
-/**
-    MAIN CONTENT
- */
-/* Main content container (white area) */
-/*
-.mainWrapper .main .content .datagrid {
-  height: 85vh;
-  border-top-right-radius: 5px;
-}
-.mainWrapper .main .content .datagrid .row * {
-  padding-right: 0;
-  padding-left: 0;
-  margin: 0;
-}
-.mainWrapper .main .content .datagrid .row.spacer {
-  height: 15px;
-}
-
-!* Main content *!
-.mainWrapper .main .content .datagrid .row .main-content-area {
-  padding: 30px;
-}
-*/
 
 
 
