--- a/herams/styles/overview/layout-map-split-4.less
+++ b/herams/styles/overview/layout-map-split-4.less
@@ -1,6 +1,6 @@
 .layout1 {
 
-  height: 65vh;
+  height: 67vh;
 
   .boxes {
     display:table;
@@ -39,37 +39,30 @@
 
   .box-1, .box-2, .box-3, .box-4 {
     font-size: 5em;
+    padding-left: 20px;
   }
 
-  .box-1 {
-      background-color: #00b3ee;
-    }
-    .box-2 {
-      background-color: #721c24;
-    }
-    .box-3 {
-      background-color: #C6E746;
-    }
-    .box-4 {
-      background-color: #f45b5b;
-    }
+  .box-1, .box-2 {
+    padding-bottom: 20px;
+  }
 
 
-    /*
-    @media (max-width: 420px) {
-        .box {
-            display: block;
-            width: 100%;
-        }
+  // COMING LATER - responsiveness
+  /*
+  @media (max-width: 420px) {
+      .box {
+          display: block;
+          width: 100%;
+      }
 
-        .box2 {
-          display: table-caption;
-        }
+      .box2 {
+        display: table-caption;
+      }
 
-        .box1 {
-          display: table-footer-group;
-        }
-    }
-    */
+      .box1 {
+        display: table-footer-group;
+      }
+  }
+  */
 
 }
