User Login popover in place

--- a/herams/styles/depoverrides.less
+++ b/herams/styles/depoverrides.less
@@ -5,7 +5,10 @@
 */
 
 .highcharts-title {
-  font-family: @font-family-sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-size: 1.2em;
+  font-weight: 700;
+  color: #424242;
 }
 .highcharts-grid-line {
     stroke-width: 0;
@@ -22,6 +25,16 @@
 .highcharts-credits {
   display: none;
 }
+
+// Legend //
+.highcharts-legend text {
+  color: #424242;
+}
+.highcharts-point {
+
+}
+
+
 
 /**
 *
