--- a/herams/styles/main.less
+++ b/herams/styles/main.less
@@ -1,6 +1,7 @@
 
 /* Import Source Sans Pro font*/
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i');
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:100,100i,300,300i,400,400i,500,500i,700,700i');
 
 @import "variables.less";
 @import "textstyles.less";
