--- a/herams/styles/overview/layout-map-split-4.less
+++ b/herams/styles/overview/layout-map-split-4.less
@@ -38,7 +38,8 @@
   }
 
   .box-1, .box-2, .box-3, .box-4 {
-    font-size: 5em;
+    font-size: 3em;
+    color: #f0e4e6;
     padding-left: 20px;
   }
 
