--- a/herams/js/overview/directives/layouts/layout_1_3.html
+++ b/herams/js/overview/directives/layouts/layout_1_3.html
@@ -1,14 +1,15 @@
-<div class="main-content layout14">
+<div class="main-content layout13">
     <div class="boxes">
        <div class="box half layout-map"><hfmap mapdata="::mapdata" ng-cloak></hfmap></div>
        <div class="box half">
-           <div class="split-4">
+           <div class="split-3">
                <div class="table-row">
                    <div class="box-1"><div class="chart-container" id="chart1">This box is empty</div></div>
                    <div class="box-2"><div class="chart-container" id="chart2">This box is empty</div></div>
                </div>
+           </div>
+           <div class="split-3">
                <div class="table-row">
-                   <div class="box-4"><div class="chart-container" id="chart4">This box is empty</div></div>
                    <div class="box-3"><div class="chart-container" id="chart3">This box is empty</div></div>
                </div>
            </div>
