--- a/herams/styles/depoverrides.less
+++ b/herams/styles/depoverrides.less
@@ -42,6 +42,13 @@
 *
 */
 
+.leaflet-container {
+  font-family: @font-family-sans-serif;
+  font-size: @font-size-base;
+  font-weight: @regular;
+}
+
+
 .leaflet-right {
   display: none;
 }
