--- a/herams/styles/overview/overview.less
+++ b/herams/styles/overview/overview.less
@@ -140,6 +140,7 @@
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
+  width: 100%;
   height: 100%;
   padding:15px;
 }
