--- a/herams/js/overview/directives/layouts/layout_1_4.html
+++ b/herams/js/overview/directives/layouts/layout_1_4.html
@@ -8,7 +8,7 @@
                    <div class="box-2"><div class="chart-container" id="chart2">This box is empty</div></div>
                </div>
                <div class="table-row">
-                   <div class="box-4"><div class="chart-container" id="chart4">This box is empty</div></div>
+                   <div class="box-4 empty"><div class="chart-container" id="chart4">This box is empty</div></div>
                    <div class="box-3"><div class="chart-container" id="chart3">This box is empty</div></div>
                </div>
            </div>
