--- a/herams/styles/overview/layout-map-split.less
+++ b/herams/styles/overview/layout-map-split.less
@@ -42,13 +42,16 @@
   }
 
   .box-1, .box-2, .box-3, .box-4 {
-    font-size: 3em;
-    color: #f0e4e6;
     padding-left: 20px;
   }
 
   .box-1, .box-2 {
     padding-bottom: 20px;
+  }
+
+  .empty {
+    font-size: 3em;
+    color: #f0e4e6;
   }
 
 
