--- a/herams/styles/base.less
+++ b/herams/styles/base.less
@@ -1,6 +1,6 @@
 html,
 body {
-  font-family: Roboto, "Open Sans", Helvetica, Arial, sans-serif;
+  font-family: "Source Sans Pro", sans-serif;
   font-size: 14px;
   font-weight: 400;
   padding: 0;
