--- a/herams/styles/overview/overview.less
+++ b/herams/styles/overview/overview.less
@@ -144,7 +144,6 @@
       padding: 10px 15px;
 
       text-align: left;
-      font-family: 'Source Sans Pro';
       font-size: 0.9em;
       font-weight: 700;
       // color: @dark-grey;
@@ -180,6 +179,26 @@
 
       color: @light-grey;
     }
+  }
+}
+
+/**
+* DATA VISUALIZATION
+ */
+
+.dataviz-table {
+  .title {
+    font-size: 1.2em;
+    font-weight: 700;
+    color: @dark-grey;
+
+    text-align: left;
+    margin: 10px 0 20px 0;
+  }
+
+  .table thead th {
+    border: none;
+    background-color: #efefef;
   }
 }
 
