--- a/herams/styles/depoverrides.less
+++ b/herams/styles/depoverrides.less
@@ -5,7 +5,6 @@
 */
 
 .highcharts-title {
-  font-family: 'Source Sans Pro', sans-serif;
   font-size: 1.2em;
   font-weight: 700;
   color: #424242;
@@ -49,6 +48,8 @@
 }
 
 
+/*
 .leaflet-right {
   display: none;
 }
+*/
