--- a/herams/views/home.html
+++ b/herams/views/home.html
@@ -4,12 +4,17 @@
         <div class="Logo">
             <img src="img/HeRAMS.png"/>
         </div>
+<!--
         <div class="menu-items">
             <ul>
                 <li><img src="img/flags/ng.svg"/> nigeria</li>
                 <li><img src="img/flags/ua.svg"/> ukraine</li>
                 <li><img src="img/flags/ye.svg"/> yemen</li>
             </ul>
+        </div>
+-->
+        <div class="menu-copy">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sit amet risus nunc. Morbi viverra placerat vulputate. Maecenas lobortis dolor felis, in tempor augue consectetur commodo. Proin at erat blandit, iaculis augue non, dapibus ipsum. Maecenas ultrices diam dolor, eget eleifend eros commodo nec. Nunc dui enim, gravida quis mi vel, malesuada pharetra leo. Nulla blandit massa lorem. Sed id arcu vel mi facilisis pretium quis ac libero. Nam eu consectetur augue, ut gravida leo. Ut ultrices lorem nec dolor aliquet, facilisis pretium turpis convallis. In tincidunt, mi ac pellentesque consectetur, velit sapien tempor quam, at eleifend sapien dui eu ligula.</p>
         </div>
     </div>
 
