--- a/herams/styles/textstyles.less
+++ b/herams/styles/textstyles.less
@@ -1,5 +1,6 @@
 /* -- GENERAL -- */
-@font-family-sans-serif:  Roboto, "Open Sans", Helvetica, Arial,sans-serif;
+// @font-family-sans-serif:  Roboto, "Open Sans", Helvetica, Arial,sans-serif;
+@font-family-sans-serif:  "Source Sans Pro",sans-serif;
 @font-family-serif:       Georgia, "Times New Roman", Times, serif;
 @font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace;
 @font-family-base:        @font-family-sans-serif;
