New popups mostly implemented (missing icons) + circeMarkers rollovers & changes applied

--- a/herams/styles/depoverrides.less
+++ b/herams/styles/depoverrides.less
@@ -46,7 +46,9 @@
   font-size: @font-size-base;
   font-weight: @regular;
 }
-
+.leaflet-touch .leaflet-control-attribution {
+  display: none;
+}
 
 /*
 .leaflet-right {
