--- a/herams/styles/home/menu.less
+++ b/herams/styles/home/menu.less
@@ -18,6 +18,7 @@
     i {
       margin:0;
       padding:0;
+      cursor: pointer;
     }
   }
 
@@ -103,9 +104,11 @@
       top: 10px;
       position: fixed;
       left: 270px;
+
       i {
         margin:0;
         padding:0;
+        cursor: pointer;
       }
     }
 
