--- a/herams/styles/home/menu.less
+++ b/herams/styles/home/menu.less
@@ -15,7 +15,7 @@
     top: 10px;
     position: fixed;
     left: 320px;
-    i {
+    img {
       margin:0;
       padding:0;
       cursor: pointer;
@@ -105,7 +105,7 @@
       position: fixed;
       left: 270px;
 
-      i {
+      img {
         margin:0;
         padding:0;
         cursor: pointer;
