--- a/herams/styles/home/menu.less
+++ b/herams/styles/home/menu.less
@@ -92,8 +92,11 @@
 
   &.reduced {
 
-    width: 300px;
-    height: 200px;
+    width: 184px;
+    height: 110px;
+
+    border-bottom-right-radius: 5px;
+    box-shadow: 0 3px 14px rgba(0,0,0,0.2);
 
     .collapse-left-content, .menu-items, .menu-copy {
       display: none;
@@ -103,7 +106,7 @@
       display: block;
       top: 10px;
       position: fixed;
-      left: 270px;
+      left: 150px;
 
       img {
         margin:0;
@@ -114,11 +117,11 @@
 
       .Logo {
         border: none;
-        padding: 40px 0;
+        padding: 20px 0;
         text-align:center;
 
         img {
-          width: 200px;
+          width: 134px;
           margin: auto;
         }
       }
