--- a/herams/styles/overview/layout-map-split.less
+++ b/herams/styles/overview/layout-map-split.less
@@ -13,9 +13,11 @@
     text-align: center;
     vertical-align:middle;
 
+    /*
     &.layout-map {
       min-width: 500px;
     }
+    */
   }
 
   .half {
