--- a/herams/styles/overview/overview.less
+++ b/herams/styles/overview/overview.less
@@ -74,7 +74,7 @@
 
     .content {
 
-      padding-left: 300px;
+      padding-left: 305px;
 
       .header {
 
@@ -129,13 +129,21 @@
 }
 
 .map-container {
+  position: relative;
+  height:100%;
+
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
   border: 3px solid white;
 
   .map-filters {
+    position: absolute;
+    width: 100%;
     height: 60px;
+    padding: 0; margin: 0;
+    z-index: 1000;
+
     display:flex;
 
     .regfiltr {
@@ -156,7 +164,7 @@
     .srchfiltr {
       width: 40%;
       padding: 10px 15px;
-      background-color: rgba(66,66,74,0.1);
+      background-color: rgba(66,66,74,0.5);
     }
     .filter-name {
       color: @intermediate-grey;
