Overview - Table review + map markers implementation start

--- a/herams/styles/main.less
+++ b/herams/styles/main.less
@@ -17,6 +17,8 @@
 @import "overview/overview.less";
 @import "overview/layout-map-split.less";
 
+@import "overview/dataviz-table-style.less";
+
 
 .browsehappy {
   margin: 0.2em 0;
