--- a/herams/styles/overview/overview.less
+++ b/herams/styles/overview/overview.less
@@ -131,6 +131,7 @@
 .map-container {
   position: relative;
   height:100%;
+  min-width: 400px;
 
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
@@ -164,7 +165,7 @@
     .srchfiltr {
       width: 40%;
       padding: 10px 15px;
-      background-color: rgba(66,66,74,0.5);
+      background-color: rgba(66,66,74,0.3);
     }
     .filter-name {
       color: @intermediate-grey;
@@ -193,22 +194,6 @@
 /**
 * DATA VISUALIZATION
  */
-
-.dataviz-table {
-  .title {
-    font-size: 1.2em;
-    font-weight: 700;
-    color: @dark-grey;
-
-    text-align: left;
-    margin: 10px 0 20px 0;
-  }
-
-  .table thead th {
-    border: none;
-    background-color: #efefef;
-  }
-}
 
 .chart-container {
   background-color: white;
