--- a/herams/styles/base.less
+++ b/herams/styles/base.less
@@ -1,45 +1,16 @@
-html,
-body {
-  font-family: "Source Sans Pro", sans-serif;
-  font-size: 14px;
-  font-weight: 400;
-  padding: 0;
-  margin: 0;
-}
-html,
-body,
-body > div,
-body > div > div {
-  height: 100%;
-}
-body {
-  background-color: #e0e0e0;
-}
-a,
-a:hover,
-a:focus {
-  cursor: pointer;
-  text-decoration: none;
-}
-*:focus {
-  outline: none;
-}
-
-
 /**
     OVERALL WRAPPER
  */
-.mainWrapper .main {
-  background-color: #e0e0e0;
-}
 .mainWrapper .main .background-top {
   height: 173px;
   background-color: #42424b;
 }
 .mainWrapper .main .content {
-  position: fixed;
+  // position: fixed;
+  position: absolute;
   top: 34px;
   width: 100%;
+  height: 90%;
   padding-left: 20px;
   padding-right: 20px;
 }
@@ -58,7 +29,7 @@ a:focus {
 }
 .content .header .breadcrumbs {
   font-size: 1.2em;
-  font-weight: 300;
+  font-weight: @light;
   a {
     color: #878787;
     &:hover {
@@ -73,7 +44,8 @@ a:focus {
 }
 .content .header .title {
   font-size: 3em;
-  font-weight: 300;
+  font-weight: @light;
+  letter-spacing: -2px;
   line-height: 34px;
   color: white;
 }
@@ -149,10 +121,20 @@ a:focus {
   color: #59585e;
   padding: 0 10px;
 }
+.content .header .user-profile > div:nth-child(2) > img {
+  padding: 0 10px;
+}
 /* arrow down */
+.content .header .user-profile > div:nth-child(2) > i {
+  font-size: 1.2em;
+  color: #e9e9e9;
+  cursor: pointer;
+}
+/*
 .content .header .user-profile > div:nth-child(2) > i:nth-child(2) {
   font-size: 1.2em;
   color: #e9e9e9;
   cursor: pointer;
 }
+*/
 
