--- a/herams/styles/depoverrides.less
+++ b/herams/styles/depoverrides.less
@@ -6,7 +6,7 @@
 
 .highcharts-title {
   font-size: 1.2em;
-  font-weight: 700;
+  font-weight: @bold;
   color: #424242;
 }
 .highcharts-grid-line {
@@ -42,7 +42,7 @@
 */
 
 .leaflet-container {
-  font-family: @font-family-sans-serif;
+  font-family: @font-family-base;
   font-size: @font-size-base;
   font-weight: @regular;
 }
