--- a/herams/styles/main.less
+++ b/herams/styles/main.less
@@ -1,7 +1,10 @@
 
 /* Import Source Sans Pro font*/
-@import url('https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i');
-@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:100,100i,300,300i,400,400i,500,500i,700,700i');
+// @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,500,600,700');
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro');
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300');
+
+//@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700');
 
 @import "variables.less";
 @import "textstyles.less";
@@ -26,22 +29,31 @@
   color: #000;
   padding: 0.2em 0;
 }
-html, body {
-  font-family: @font-family-sans-serif;
+
+html,
+body {
+  font-family: @font-family-base;
   font-size: @font-size-base;
   font-weight: @regular;
   padding: 0;
   margin: 0;
+  height: 100%;
 }
-html, body, body > div, body > div > div {
+body > div,
+body > div > div {
   height: 100%;
 }
 body {
-  background-color: @light-grey;
+  background-color: #e0e0e0;
 }
-a, a:hover, a:focus {
+a,
+a:hover,
+a:focus {
   cursor: pointer;
+  text-decoration: none;
 }
 *:focus {
   outline: none;
 }
+
+
