--- a/herams/styles/textstyles.less
+++ b/herams/styles/textstyles.less
@@ -1,9 +1,5 @@
 /* -- GENERAL -- */
-// @font-family-sans-serif:  Roboto, "Open Sans", Helvetica, Arial,sans-serif;
-@font-family-sans-serif:  "Source Sans Pro",sans-serif;
-@font-family-serif:       Georgia, "Times New Roman", Times, serif;
-@font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace;
-@font-family-base:        @font-family-sans-serif;
+@font-family-base:        "Source Sans Pro",sans-serif;
 
 @font-size-base:          14px;
 
@@ -15,9 +11,9 @@
 @font-size-h6:            1em;
 @font-size-h7:            0.9em;
 
-@thin:      100;
+@thin:      200;
 @light:     300;
 @regular:   400;
-@medium:    500;
+@medium:    600;
 @bold:      700;
 
