--- a/herams/styles/overview/overview.less
+++ b/herams/styles/overview/overview.less
@@ -246,6 +246,8 @@
   font-size: 1.2em;
   color:@brand-blue;
   z-index: 1;
+
+  cursor: pointer;
 }
 .partners-list-grp, .partners-list-cache {
   position: absolute;
