Overview - partners disappear onscroll + review for categories switching

--- a/herams/js/overview/directives/layouts/layout_1_4.html
+++ b/herams/js/overview/directives/layouts/layout_1_4.html
@@ -1,4 +1,4 @@
-<div class="main-content layout14">
+<div class="layout14">
     <div class="boxes">
        <div class="box half layout-map"><hfmap mapdata="::mapdata" ng-cloak></hfmap></div>
        <div class="box half">
