--- a/herams/js/overview/directives/layouts/layout_1_3.html
+++ b/herams/js/overview/directives/layouts/layout_1_3.html
@@ -1,4 +1,4 @@
-<div class="main-content layout13">
+<div class="layout13">
     <div class="boxes">
        <div class="box half layout-map"><hfmap mapdata="::mapdata" ng-cloak></hfmap></div>
        <div class="box half">
