--- a/herams/js/overview/directives/layouts/layout_1_3.html
+++ b/herams/js/overview/directives/layouts/layout_1_3.html
@@ -10,7 +10,9 @@
            </div>
            <div class="split-3">
                <div class="table-row">
-                   <div class="box-3"><div class="chart-container"><dataviz-table></dataviz-table></div></div>
+                   <div class="box-3"><div class="chart-container">
+                       <dataviz-table></dataviz-table></div>
+                   </div>
                </div>
            </div>
        </div>
