--- a/herams/styles/home/map.less
+++ b/herams/styles/home/map.less
@@ -1,7 +1,7 @@
 .map-entry {
 
   margin: 0; padding:0;
-  margin-left: @home-sidebar-width;
+  // margin-left: @home-sidebar-width;
 
   #mapid {
     height: 100vh;
