--- a/herams/styles/overview/dataviz-table-style.less
+++ b/herams/styles/overview/dataviz-table-style.less
@@ -31,6 +31,12 @@
       // width: 600px;
     }
   }
+
+  .HRStable-row-container {
+    width: 100%;
+    display: flex;
+  }
+
   .HRStable-cell {
     box-sizing: border-box;
     flex-grow: 1;
