--- a/herams/styles/home/map.less
+++ b/herams/styles/home/map.less
@@ -43,6 +43,11 @@
         // font-size: 0.5em;
         margin-right: 7px;
       }
+
+      i {
+        font-size: 0.8em;
+        margin-right: 7px;
+      }
     }
 
     &:nth-child(2) {
