--- a/herams/js/overview/directives/layouts/layout_1_4.html
+++ b/herams/js/overview/directives/layouts/layout_1_4.html
@@ -4,12 +4,12 @@
        <div class="box half">
            <div class="split-4">
                <div class="table-row">
-                   <div class="box-1"><div class="chart-container" id="chart1">This box is empty</div></div>
-                   <div class="box-2"><div class="chart-container" id="chart2">This box is empty</div></div>
+                   <div class="box-1"><div class="chart-container" id="chart1"></div></div>
+                   <div class="box-2"><div class="chart-container" id="chart2"></div></div>
                </div>
                <div class="table-row">
-                   <div class="box-4 empty"><div class="chart-container" id="chart4">This box is empty</div></div>
-                   <div class="box-3"><div class="chart-container" id="chart3">This box is empty</div></div>
+                   <div class="box-3"><div class="chart-container" id="chart3"></div></div>
+                   <div class="box-4"><div class="chart-container" id="chart4"></div></div>
                </div>
            </div>
        </div>
