--- a/herams/styles/main.less
+++ b/herams/styles/main.less
@@ -58,3 +58,8 @@ a:focus {
 }
 
 
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important;
+}
+
+
