--- a/herams/styles/overview/overview.less
+++ b/herams/styles/overview/overview.less
@@ -157,7 +157,7 @@
 
 .map-container {
   position: relative;
-  // height:100%;
+  height:100%;
   min-width: 400px;
 
   -webkit-border-radius: 5px;
