--- a/herams/styles/overview/dataviz-table-style.less
+++ b/herams/styles/overview/dataviz-table-style.less
@@ -35,7 +35,7 @@
   tr {
     height: 25px;
     border-bottom: solid 1px @light-grey;
-    &:last-child {
+    &:last-of-type {
       border-bottom: none;
     }
   }
