--- a/herams/styles/overview/layout-map-split.less
+++ b/herams/styles/overview/layout-map-split.less
@@ -49,7 +49,11 @@
   }
 
   .box-1, .box-2 {
-    padding-bottom: 20px;
+    padding-bottom: 10px;
+  }
+
+  .box-3, .box-4 {
+    padding-top: 10px;
   }
 
   .empty {
