--- a/herams/styles/overview/overview.less
+++ b/herams/styles/overview/overview.less
@@ -157,7 +157,7 @@
 
 .map-container {
   position: relative;
-  height:100%;
+  height: 100%;
   min-width: 400px;
 
   -webkit-border-radius: 5px;
@@ -169,10 +169,11 @@
     position: absolute;
     width: 100%;
     height: 60px;
-    padding: 0; margin: 0;
+    padding: 0;
+    margin: 0;
     z-index: 1000;
 
-    display:flex;
+    display: flex;
 
     .regfiltr {
       width: 30%;
@@ -188,11 +189,11 @@
       &:first-child {
         border-right: 1px #e0e0e0 solid;
       }
-   }
+    }
     .srchfiltr {
       width: 40%;
       padding: 10px 15px;
-      background-color: rgba(66,66,74,0.3);
+      background-color: rgba(66, 66, 74, 0.3);
     }
     .filter-name {
       color: @intermediate-grey;
@@ -216,6 +217,38 @@
       color: @light-grey;
     }
   }
+
+  .map-legend {
+    right: 10px;
+    bottom: 10px;
+    width: 135px;
+    z-index: 1001;
+
+    .legend-part {
+      background-color: white;
+      border-radius: 3px;
+
+      font-size: 0.8em;
+      color: @intermediate-grey;
+
+      box-shadow: 0 3px 14px rgba(0, 0, 0, 0.2);
+
+      padding: 6px 10px 10px 10px;
+      height: 100%;
+
+      & > div {
+        display: flex;
+        align-items: center;
+        height: 20px;
+      }
+
+      i {
+        font-size: 0.8em;
+        margin-right: 7px;
+      }
+    }
+
+  }
 }
 
 /**
@@ -223,6 +256,8 @@
  */
 
 .chart-container {
+  position:relative;
+
   background-color: white;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
@@ -230,6 +265,15 @@
   width: 100%;
   height: 100%;
   padding:15px;
+
+  .pieChartCenterTxt {
+    position:absolute;
+    width:100%;
+    left:0;
+    text-align:center;
+    font-size: 1.2em;
+    font-weight: @bold;
+  }
 }
 
 
